objects/WT_Third_Party_Data__c.object
<CustomObject>
    <fields>
        <fullName>WT_PUBLIC_FILING_INDICATOR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Public Filing Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Parent_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Parent_Country_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Country/Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Pre_Tax_Profit_USD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Tax Profit (USD)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Primary_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Zip10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Zip10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Zip4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Zip4</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Zip Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_state__c</fullName>
        <label>Primary state</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Prospect_List__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prospect List</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_RADIAL_DISTANCE_FROM_TARGET_ELEMENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Radial Distance From Target Element</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Revenue_USD__c</fullName>
        <label>Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_SALUTATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salutation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_ADDRESS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_CARRIER_ROUTE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Carrier Route Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_CITY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_CODE_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Code1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_CODE_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Code 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_CODE_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Code 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_DESC_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Desc 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_DESC_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Desc 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_SIC_DESC_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary SIC Desc 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_STATE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_STATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_ZIP10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Zip10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_ZIP4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Zip4</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SECONDARY_ZIP_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SELECTED_SIC_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected SIC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SELECTED_SIC_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected SIC Desc</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SEQUENCE_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sequence Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SITE_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SMALL_BUSINESS_ENTREPRENEUR__c</fullName>
        <label>Small Business Entrepreneur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_SQUARE_FOOTAGE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Square Footage Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_SQUARE_FOOTAGE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Square Footage Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_STOCK_EXCHANGE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stock Exchange Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_STOCK_EXCHANGE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stock Exchange Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_STOCK_TICKER_SYMBOL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stock Ticker Symbol</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Share__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Share</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_State_Or_Province__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Or Province</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_ADDRESS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_CARRIER_ROUTE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary Carrier Route Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_CITY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_STATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_ZIP10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary Zip10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_ZIP4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary Zip4</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TERTIARY_ZIP_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tertiary Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TITLE_ADDRESS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TITLE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TITLE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TOLL_FREE_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Toll Free Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_TPS_Flag__c</fullName>
        <label>TPS Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_TRANSACTION_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TRANSACTION_TYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TRUE_FRANCHISE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>True Franchise</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Ticker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ticker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Town__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Tradestyle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tradestyle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_UCC_Filing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UCC Filing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_UK_SIC_2007_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UK SIC 2007 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_UK_SIC_2007_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UK SIC 2007 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_US_8_Digit_SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US 8-Digit SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_US_8_Digit_SIC_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US 8-Digit SIC Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_US_SIC_1987_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US SIC 1987 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_US_SIC_1987_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US SIC 1987 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Ultimate_Parent_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ultimate Parent Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Ultimate_Parent_Country_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ultimate Parent Country/Region</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_WEB_SITE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Web Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_WHITE_COLLAR_INDICATOR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>White Collar Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_WHITE_COLLAR_PERCENTAGE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>White Collar Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_WORK_AT_HOME_BUSINESS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work At Home Business</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Women_Owned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Women Owned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_YEAR_ESTABLISHED__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Established</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_YEAR_FIRST_APPEARED_IN_YELLOW_PAGES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year First Appeared in Yellow Pages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_YEAR_SIC_ADDED__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year SIC Added</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_YELLOW_PAGE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Yellow Page Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Year_Founded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Founded</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Third Party Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Data</pluralLabel>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>